--- a/social_profile/index.html
+++ b/social_profile/index.html
@@ -15,12 +15,28 @@
       font-family: "Inter";
       src: url(./assets/fonts/Inter-VariableFont_slnt\,wght.ttf) format("truetype");
     }
-    h3, span, button{
+    .font_style{
       font-family: "Inter";
-      color: hsl(0, 0%, 100%);
-      line-height: 150%;
-      /* font-weight: 600; */
+      line-height: 250%;
+      font-size: 14px;
     }
+    .font_white{
+      color: hsl(0, 0%, 100%);
+    }
+    .font_green{
+      color: hsl(75, 94%, 57%);
+      font-weight: 700;
+    }
+
+    .description{
+      font-size: 13px;
+    }
+    .name{
+      font-size: 24px;
+      font-weight: 600;
+      margin: 0;
+    }
+
     .flexbox{
       display: flex;
       flex-direction: column;
@@ -51,12 +67,6 @@
     .personal_info{
       width: 100%;
     }
-    .personal_info h3{
-        margin: 0;
-    }
-    .personal_info span{
-      color: hsl(75, 94%, 57%);
-    }
     .buttons{
       width: 100%;
       gap: 14px 0;
@@ -68,18 +78,30 @@
       background-color: hsl(0, 0%, 20%);
       border: none;
       border-radius: 10px;
+      font-weight: 700;
+    }
+    button:hover{
+      background-color: hsl(75, 94%, 57%);
+      color: hsl(0, 0%, 8%);
+    }
+    @media screen and (max-width: 400px){
+      main{
+        width: 85%;
+        height: 65%;
+        padding: 34px;
+      }
     }
   </style>
 </head>
 <body class="flexbox">
-  <main class="flexbox">
+  <main class="flexbox font_style">
       <img src="./assets/images/avatar-jessica.jpeg" alt="avatar-jessica"> 
-      <div class="personal_info flexbox">
-          <h3>Jessica Randall</h3>
-          <span>London, United Kingdom</span>
+      <div class="personal_info flexbox font_white">
+          <h3 class="name">Jessica Randall</h3>
+          <span class="font_green">London, United Kingdom</span>
       </div>
-      <span id="description">"Front-end developer and avid reader."</span>
-      <div class="buttons flexbox">
+      <span class="description  font_white">"Front-end developer and avid reader."</span>
+      <div class="buttons flexbox  font_white">
           <button>GitHub</button>
           <button>Frontend Mentor</button>
           <button>LinkedIn</button>
@@ -87,20 +109,5 @@
           <button>Instagram</button>
       </div>
   </main>
-
-  <!-- 
-  
-  
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram -->
-  
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
 </body>
 </html>
