--- a/four_card/index.html
+++ b/four_card/index.html
@@ -22,13 +22,17 @@
     </div>
 
     <div class="content_wrapper">
-      <div class="card border-cyan">
-        <div class="text">
-          <h3 class="text-preset-3">Supervisor</h3>
-          <p class="text-preset-5">Monitors activity to identify project roadblocks</p>
+
+      <div class="card_wrapper">
+        <div class="card border-cyan">
+          <div class="text">
+            <h3 class="text-preset-3">Supervisor</h3>
+            <p class="text-preset-5">Monitors activity to identify project roadblocks</p>
+          </div>
+          <img src="assets/images/icon-supervisor.svg" alt="">
         </div>
-        <img src="assets/images/icon-supervisor.svg" alt="">
       </div>
+
 
       <div class="card_wrapper">
         <div class="card border-red">
@@ -48,13 +52,16 @@
         </div>
       </div>
 
-      <div class="card border-blue">
-        <div class="text">
-          <h3 class="text-preset-3">Calculator</h3>
-          <p class="text-preset-5">Uses data from past projects to provide better delivery estimates</p>
+      <div class="card_wrapper">
+        <div class="card border-blue">
+          <div class="text">
+            <h3 class="text-preset-3">Calculator</h3>
+            <p class="text-preset-5">Uses data from past projects to provide better delivery estimates</p>
+          </div>
+          <img src="assets/images/icon-calculator.svg" alt="">
         </div>
-        <img src="assets/images/icon-calculator.svg" alt="">
       </div>
+
     </div>
 </body>
 </html>
