--- a/meet-landing-page/index.html
+++ b/meet-landing-page/index.html
@@ -11,32 +11,52 @@
   <div class="logo">
     <img class="icon" src="assets/logo.svg" alt="dots icon">
   </div>
-  <header>
-    <img src="assets/desktop/image-hero-left.png" alt="">
-    <div>
 
+  <header>
+    <img class="left_img" src="assets/desktop/image-hero-left.png" alt="">
+    <div class="text_group">
+      <h1>Group Chat for Everyone</h1>
+      <span class="description">
+        Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.
+      </span>
+      <div class="button_group">
+        <div class="blue button">Download <span style="color: var(--blue-300);">v1.3</span></div>
+        <div class="purple button">What is it?</div>
+      </div>
     </div>
-    <img src="assets/desktop/image-hero-right.png" alt="">
+    <img class="right_img" src="assets/desktop/image-hero-right.png" alt="">
   </header>
-  <main></main>
-  <footer></footer>
+  
+  <main>
+    <img src="assets/arrow_01.svg" alt="">
+    <div class="gallery">
+      <img src="assets/desktop/image-woman-in-videocall.jpg" alt="">
+      <img src="assets/desktop/image-women-videochatting.jpg" alt="">
+      <img src="assets/desktop/image-men-in-meeting.jpg" alt="">
+      <img src="assets/desktop/image-man-texting.jpg" alt="">
+    </div>
+    <div class="text_group">
+      <div class="title">
+        <span class="blue_text">Built for modern use</span>
+        <h2>Smarter meetings, all in one place</h2>
+      </div>
+      <span class="description">
+        Send messages, share files, show your screen, and record your meetings — all in one 
+        workspace. Control who can join with invite-only team access, data encryption, and data export.
+      </span>
+    </div>
+  </main>
+  <div class="arrow_2">
+    <img src="assets/arrow_02.svg" alt="">
+  </div>
+  <footer>
+    <div class="conteiner">
+      <h2>Experience more together</h2>
+      <span class="description">
+        Stay connected with reliable&nbsp;HD meetings and unlimited one-on-one and group video sessions.
+      </span>
+      <div class="purple button">Download <span style="color: var(--purple-300);">v1.3</span></div>
+    </div>
+  </footer>
 </body>
 </html>
-<!-- Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.
-
-Download v1.3
-What is it?
-
-01
-Built for modern use
-
-Smarter meetings, all in one place
-
-Send messages, share files, show your screen, and record your meetings — all in one 
-workspace. Control who can join with invite-only team access, data encryption, and data export.
-
-02
-Experience more together
-Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.
-
-Download v1.3 -->
