meet landing page finished

--- a/meet-landing-page/index.html
+++ b/meet-landing-page/index.html
@@ -55,7 +55,9 @@
       <span class="description">
         Stay connected with reliable&nbsp;HD meetings and unlimited one-on-one and group video sessions.
       </span>
-      <div class="purple button">Download <span style="color: var(--purple-300);">v1.3</span></div>
+      <div>
+        <div class="purple button">Download <span style="color: var(--purple-300);">v1.3</span></div>
+      </div>
     </div>
   </footer>
 </body>
